// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente <GifExpertApp/>. Debe de mostrar una lista de categorías 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Music"
      key="Music"
    />
    <GifGrid
      category="Crash Bandicoot"
      key="Crash Bandicoot"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en el componente <GifExpertApp/>. Debe ser igual a su snapshot 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
